k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: "140.113.121.36"
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-service
      #       port:
      #         number: 5000
      # - path: /adminer
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: adminer-service
      #       port:
      #         number: 8080
